--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-3 col-12">
                         <h2 class="heading values-top">We spend more time reading than writing code!</h2>
                         <div><br/></div>
-                        <p class="paragraph values-content">Humans are the main users of my code, so why not code for them? Make it readable and maintainable. Leave the smarts to the machine.</p>
+                        <p class="paragraph values-content">Humans are the main "consumers" of my code, so why not code for them? Make it readable and maintainable. Leave the smarts to the machine.</p>
                         <h2 class="heading-2 values-bottom">Code for Humans!</h2>
                         <hr/>
                     </div>
