--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <a target="_blank" href="https://www.anaplan.com"><img data-type="image" src="assets/img/anaplan-logo.png" class="experience-logo" alt="Anaplan"/></a>
                                 <p class="timeline-date">Mar 2018 - Current</p>
                                 <p class="timeline-text">Cloud services: Connected Planning</p>
-                                <p class="timeline-text">Software Engineer</p>
+                                <p class="timeline-text">Software Engineer and Tech Lead</p>
                                 <hr/>
                             </li>
                             <li>
@@ -76,7 +76,7 @@
                             <li>
                                 <a target="_blank" href="https://www.boldint.com"><img data-type="image" src="assets/img/bold-logo.png" class="experience-logo" alt="Bold"/></a>
                                 <p class="timeline-date">Sep 2010 - Apr 2012</p>
-                                <p class="timeline-text">IT Consultancy</p>
+                                <p class="timeline-text">IT Consultancy - Banking</p>
                                 <p class="timeline-text">Consultant</p>
                                 <hr/>
                             </li>
